--- a/src/app/dashboard/registry/registry.component.html
+++ b/src/app/dashboard/registry/registry.component.html
@@ -6,10 +6,11 @@
         <mat-form-field class="example-full-width">
           <mat-label>Nombre </mat-label>
           <input
-            type="text"
             matInput
-            [formControl]="personCtrl"
+            autofocus
+            type="text"
             [matAutocomplete]="auto"
+            [formControl]="personCtrl"
             (keyup.enter)="addNewAssitant()"
           />
           <mat-autocomplete
@@ -35,7 +36,7 @@
         </mat-card-actions>
         <mat-nav-list>
           <mat-list-item *ngFor="let p of chosen; index as i">
-            <a matLine href="...">{{ displayFn(p) }}</a>
+            <span matLine>{{ displayFn(p) }}</span>
             <button mat-icon-button (click)="remove(i)">
               <mat-icon>person_remove</mat-icon>
             </button>
